# Kutamba

./: .buildconfig  dev.n3shemmy3.Kutamba.json  dev.n3shemmy3.Kutamba.json~  meson.build
.flatpak/: meson.sh
.flatpak-builder/cache/refs/heads/x86_64-dev.n3shemmy3.Kutamba.json/: init
.flatpak/flatpak-builder/cache/refs/heads/x86_64-home_2Fn3shemmy3_2FProjects_2FGnome_2Fkutamba_2Fdev.n3shemmy3.Kutamba.json/: init
.flatpak/flatpak-builder/checksums/: x86_64-dev.n3shemmy3.Kutamba.json
data/: dev.n3shemmy3.Kutamba.desktop.in  meson.build
data/icons/: meson.build
po/: POTFILES
src/: dev.n3shemmy3.Kutamba.data.gresource.xml  dev.n3shemmy3.Kutamba.src.gresource.xml  kutamba.data.gresource.xml  main.js  meson.build  window.js  window.ui
src/app/: main-content.js  window.js
src/ui/: main-content.ui  window.ui
